Fix vertical alignment for error message to login page

--- a/css/login.css
+++ b/css/login.css
@@ -46,6 +46,7 @@ body {
 #form-login > p.error {
     background-color: #009999;
     color: #fff;
+    padding: 10px 30px;
 }
 
 #form-login button[type="submit"], #form-login a#github {
